--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #myCanvas {
-  background-image: url("https://img.freepik.com/premium-photo/park-cartoon-image-background-copy-space_1169880-286389.jpg?semt=ais_hybrid&w=740&q=80");
+  background-image: url("https://t3.ftcdn.net/jpg/00/92/35/44/360_F_92354480_Fzdw2Q8qOJyB7OgIBtev0IoRL2rvoJSt.jpg");
   background-size: 600px 400px;
   border-radius: 10px;
   background-position: center;
